2007-05-18  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (ARCH): Releasing 1.5.2.

	* src/arch-arm/Kconfig: Fixed companion boot by explicitly
	enabling the simple/NOR flash relocator as the primary relocator.

	* src/drivers/drv-nand.c (nand_sequential_input): Fixed the NAND
	driver to R/W on ST NAND parts.

2007-05-17  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-lh7952x/debug_ll.h: Fixed UART declarations.

	* src/mach-lh7952x/init-motoedge.c: Converted to inline
	platform initialization.

	* src/arch-arm/entry/relocate-simple.c: fixed relocate-simple()
	because we changed the way we handle offsets.

2007-05-16  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (SUBLEVEL): Rolled to 1.5.2 so that we can keep track
	of this interim release.

	* src/apex/command.c (exec_monitor): Eliminated representation of
	empty commands in startup command list.

2007-05-15  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/apex.lds.S: Reorganized the sections and the
	section names to be more readable and consistent.

2007-05-12  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/reset.c: Restructured to allow for cleaner
	startup code.  Legacy implementations are still OK, but the new
	plumbing permits seamless transitions between various
	initialization elements to handle constrained boot situations.
	Also removed an onerous constraint on register usage in the
	relocate_apex() function.  The caller is now forced to assume that
	no registers are saved.

	* src/arch-arm/linux/atag.c (atag_header): Eliminated the core tag.

2007-05-10  Marc Singer  <elf@buici.com>

	* Releasing 1.5.0 with iMX31 and OneNAND.

2007-05-10  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/relocate-onenand.c: Groomed the relocation for
	OneNAND to remove unneeded return address calculation.

	* src/drivers/drv-dm9000.c: Added code to help select the proper
	default interface when there could be two and only one is present.
