@@ -370,6 +370,7 @@ config ENV_REGION
 	default "nand:64k+32k" if (MACH_LPD79524 && NAND_BOOT)
 	default "nor:128k+64k" if MACH_NSLU2
 	default "nor:120k+8k"  if MACH_KEV79524
+	default "null:"
 	help
 	  This region stores the user configurable environment.   
 
@@ -416,12 +417,7 @@ config VARIATION_SUFFIX
 
 choice
 	prompt "Bootstrap Method"
-	depends on USES_NOR_BOOTFLASH\
-         || USES_NAND_BOOTFLASH\
-         || DRIVER_ONENAND\
-	 || USES_COMPANION_EVT1_BOOT\
-	 || USES_COMPANION_EVT2_BOOT
-	default NOR_BOOT
+	default NO_BOOTSTRAP
 	help
 	  There are many ways in which the system could bootstreap.
 	  The most common is NOR flash mapped into the memory space.
@@ -443,8 +439,8 @@ config NO_BOOTSTRAP
 	  the same as NOR_BOOTFLASH.
 
 config NOR_BOOT
-	depends on USES_NOR_BOOTFLASH
 	bool "NOR Flash Boot"
+	depends on USES_NOR_BOOTFLASH
 	select RELOCATE_SIMPLE
 	help
 	  This option chooses a standard NOR flash boot method where
@@ -452,8 +448,8 @@ config NOR_BOOT
 	  space on reset.
 
 config NAND_BOOT
-	depends on USES_NAND_BOOTFLASH
 	bool "NAND Flash Boot"
+	depends on USES_NAND_BOOTFLASH
 	select RELOCATE_NAND
 	help
 	  This option chooses a standard NAND flash boot method that
