@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Fri May 18 15:42:25 2007
+# Tue May 22 12:15:12 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV6=y
@@ -24,14 +24,15 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_CC_OPTIMIZE_FOR_SPEED is not set
 # CONFIG_CC_NO_OPTIMIZATION is not set
 CONFIG_STARTUP_UART=y
-# CONFIG_DEBUG_LL is not set
+CONFIG_DEBUG_LL=y
 CONFIG_SPINNER=y
-# CONFIG_ATAG is not set
+CONFIG_ATAG=y
 # CONFIG_MMU is not set
 # CONFIG_DISABLE_MMU_AT_BOOT is not set
 CONFIG_SDRAMBOOT_REPORT=y
 CONFIG_STACK_SIZE=0x1000
 # CONFIG_BOOTSTRAP_MEMTEST is not set
+CONFIG_ATAG_PHYS=0x80000100
 CONFIG_ARCH_NUMBER=447
 CONFIG_APEX_VMA=0x80200000
 CONFIG_KERNEL_LMA=0x80008000
@@ -101,16 +102,15 @@ CONFIG_USES_CS8900=y
 CONFIG_ENV=y
 CONFIG_ENV_MUTABLE=y
 CONFIG_ENV_LINK=y
-CONFIG_ENV_REGION=""
+CONFIG_ENV_REGION="null:"
 CONFIG_ENV_CHECK_LEN=1024
 # CONFIG_VARIATIONS is not set
-
-#
-#    Default Startup
-#
-# CONFIG_AUTOBOOT is not set
-CONFIG_ENV_STARTUP_KERNEL_COPY=y
-# CONFIG_ENV_REGION_KERNEL_SWAP is not set
+# CONFIG_NO_BOOTSTRAP is not set
+CONFIG_NOR_BOOT=y
+# CONFIG_NAND_BOOT is not set
+# CONFIG_ONENAND_BOOT is not set
+# CONFIG_COMPANION_EVT1_BOOT is not set
+# CONFIG_COMPANION_EVT2_BOOT is not set
 
 #
 #    Regions
@@ -120,5 +120,9 @@ CONFIG_ENV_REGION_KERNEL=""
 #
 #    Overrides
 #
-# CONFIG_ENV_DEFAULT_STARTUP_OVERRIDE is not set
+# CONFIG_ENV_DEFAULT_CMDLINE_OVERRIDE is not set
+CONFIG_ENV_DEFAULT_STARTUP_OVERRIDE=y
+CONFIG_ENV_DEFAULT_STARTUP="console=ttymxc0,115200 root=/dev/nfs ip=rarp jtag=on"
+CONFIG_USES_NOR_BOOTFLASH=y
+CONFIG_RELOCATE_SIMPLE=y
 CONFIG_INLINE_PLATFORM_INITIALIZATION=y
